--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,6 @@
 }
 
 body {
-  max-width: 1440px;
   height: 100vh;
   background-color: #f2f2f2;
   font-size: 0.9375rem;
@@ -65,18 +64,35 @@ body {
   background-color: rgba(255, 255, 255, 0.75);
 }
 
-@media (min-width: 375px) {
+.box .button:hover {
+  color: rgba(255, 255, 255, 0.75);
+  border: 3px solid rgba(255, 255, 255, 0.75);
+  padding: 12px;
+}
+
+.box .button-one_color {
+  color: #e38826;
+}
+
+.box .button-two_color {
+  color: #006970;
+}
+
+.box .button-three_color {
+  color: #004241;
+}
+
+@media (max-width: 768px) {
   main {
     display: -ms-grid;
     display: grid;
-    -ms-grid-columns: 375px;
-        grid-template-columns: 375px;
+    -ms-grid-columns: 100%;
+        grid-template-columns: 100%;
     -ms-grid-rows: 1fr 1fr 1fr;
         grid-template-rows: 1fr 1fr 1fr;
-    margin: 80px 12px;
+    margin: 80px 6.666666666666667%;
   }
   main .box {
-    width: 325px;
     height: 440px;
   }
   .box-one {
@@ -84,6 +100,30 @@ body {
   }
   .box-three {
     border-radius: 0 0 0.9375rem 0.9375rem;
+  }
+}
+
+@media (min-width: 1024px) {
+  body {
+    display: -ms-grid;
+    display: grid;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -ms-flex-line-pack: center;
+        align-content: center;
+  }
+  main {
+    width: 919px;
+    display: -ms-grid;
+    display: grid;
+    -ms-grid-columns: 1fr 1fr 1fr;
+        grid-template-columns: 1fr 1fr 1fr;
+    -ms-grid-rows: 1fr;
+        grid-template-rows: 1fr;
+  }
+  .box {
+    height: 500px;
   }
 }
 /*# sourceMappingURL=style.css.map */
