--- a/css/style.css
+++ b/css/style.css
@@ -125,5 +125,11 @@ body {
   .box {
     height: 500px;
   }
+  .box-one {
+    border-radius: 0.9375rem  0 0 0.9375rem;
+  }
+  .box-three {
+    border-radius: 0 0.9375rem  0.9375rem 0;
+  }
 }
 /*# sourceMappingURL=style.css.map */
